--- a/epub.css
+++ b/epub.css
@@ -1,22 +1,21 @@
 body {
-  text-align: justify;
-}
-
-code, pre {
-  font-family: "DejaVuSansMono", monospace;
-}
-
-h1, h2, h3, h4, h5, h6 {
   text-align: left;
+}
+
+code {
+  font-family: "DejaVuSansMono", monospace;
+  font-size: 0.9em;
+  background-color: #f5f5f5;
+  border-radius: 3px;
 }
 
 pre {
   /* Don't make it too dark or it will be harder to read on e-ink devices */
+  font-family: "DejaVuSansMono", monospace;
   background-color: #f5f5f5;
   border-radius: 3px;
-  font-size: 0.85em;
+  font-size: 0.9em;
   padding: 10px;
-  text-align: left;
   /* Wrap the text of pre sections */
   white-space: pre-wrap;
 }
